Added most of the other datatypes and support in Modbus